# usbshare

./: 99-hid.rules  LICENSE  README.md  capture.pcapng  index.js
Rust/: Cargo.toml  README.md  build.rs  resources.rc
Rust/resources/: resources.xml
Rust/src/: main.rs
WebHID/: 99-hid.rules  index.html
WebHIDMulti/: index.html  index.js
