[package]
name = "usbshare"
version = "0.1.1"
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hidapi = "1.2.6"
tray-item = "0.8.0"
[target.'cfg(not(windows))'.dependencies]
gtk = "0.9.0"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
[target.'cfg(not(windows))'.build-dependencies]
gio = "0.14.6"